# componentes_django

./: README.md  manage.py  pyproject.toml
componentes_django/: asgi.py  settings.py  urls.py  wsgi.py
posts/: models.py  utils.py
posts/migrations/: 0001_initial.py
posts/tests/: test_commet_model.py  test_post_model.py
users/: README.md  admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_alter_myuser_managers_remove_myuser_is_superuser.py  0003_myuser_is_superuser.py  0004_myuser_is_active_myuser_is_staff.py
users/tests/: test_user_model.py  test_user_serializer.py  test_user_view.py  utils.py
